--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>TampaMixtape - Tampa Bay Music Analytics</title>
+    <meta name="title" content="TampaMixtape - Tampa Bay Music Analytics" />
     <meta name="description" content="The definitive source for Tampa Bay music analytics. Real-time charts, streaming data, and discovery tools powered by Spotify, Apple Music, YouTube, and more." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tampamixtape.com/" />
+    <meta property="og:title" content="TampaMixtape - Tampa Bay Music Analytics" />
+    <meta property="og:description" content="The definitive source for Tampa Bay music analytics. Real-time charts, streaming data, and discovery tools powered by Spotify, Apple Music, YouTube, and more." />
+    <meta property="og:image" content="https://tampamixtape.com/og-image.png" />
+    <meta property="og:image:width" content="2974" />
+    <meta property="og:image:height" content="1578" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://tampamixtape.com/" />
+    <meta property="twitter:title" content="TampaMixtape - Tampa Bay Music Analytics" />
+    <meta property="twitter:description" content="The definitive source for Tampa Bay music analytics. Real-time charts, streaming data, and discovery tools powered by Spotify, Apple Music, YouTube, and more." />
+    <meta property="twitter:image" content="https://tampamixtape.com/og-image.png" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
